# Loomdraft

./: .gitignore  LICENSE  README.md  eslint.config.js  index.html  package.json  plan.md  pnpm-lock.yaml
.github/workflows/: deploy-site.yml  release.yml
docs/: hugo.toml
docs/content/: _index.md
docs/layouts/: index.html
docs/public/: index.html  index.xml  sitemap.xml
docs/static/: robots.txt
src/: App.css  App.tsx  constants.ts  docTypes.test.ts  docTypes.ts  types.test.ts  types.ts  useCorkboardData.ts  useProjectMetadata.ts  useTheme.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: corkboard.rs  db.rs  error.rs  export.rs  frontmatter.rs  lib.rs  main.rs  metadata.rs  project.rs  snapshots.rs  templates.rs  theme.rs
src/components/: Card.tsx  ContextMenu.tsx  Corkboard.tsx  CorkboardFilterBar.tsx  DeleteConfirmDialog.tsx  Dialogs.tsx  DocTypeSettings.tsx  Editor.tsx  ErrorBoundary.tsx  ExportDialog.tsx  FormattingButtons.tsx  ImagePreviewCard.tsx  InsertButtons.tsx  KeyboardShortcuts.tsx  LinkPreviewCard.tsx  Onboarding.tsx  QuickOpen.tsx  ReadThrough.tsx  SearchPanel.tsx  Sidebar.tsx  StatusSubmenu.tsx  TagsEditor.tsx  ThemePicker.tsx  Toast.tsx  Toolbar.tsx  TreeNode.tsx  VersionHistory.tsx  sidebarHelpers.ts  toolbarHelpers.ts
src/editor/: facets.ts  focusModeExtension.ts  imageCache.ts  imageExtension.ts  keymaps.ts  spellCheckExtension.ts  theme.ts  typewriterExtension.ts  useCodeMirror.ts  wikiLinkExtension.ts
src/styles/: breadcrumb.css  corkboard.css  dialogs.css  editor.css  (+7 more)
(+25 files in other folders)
